apps/storage/minio/ingress.yaml
# traefik.containo.us/v1alpha1 depreciated in Traefik v3
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: minio-ui
    annotations:
        kubernetes.io/ingress.class: traefik-internal
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:seFjyEumAgiNi2B6a8JuHHrSytpe4brGaw==,iv:zHkdZgn16o1mpfAbliayqIBuFyRaS5WCIPZ4p9d8WgU=,tag:hEflRjNt+JKuYnUZsm6+oA==,type:str]
          kind: Rule
          services:
            - name: minio
              port: 9001
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBReGQ5Uy9WUXdwblhuemdH
[...]
            hGMyfK1zzRtGrjSPv28LYp77eJEDyN1lJ4q0xNXtH+7ja3eMTdA6ug==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-20T07:52:09Z"
    mac: ENC[AES256_GCM,data:hmJTqaZDrChH7wRZcTdp5b8f3x9Uw81UKq2Em7UyhtkKkRAH4fgIg6rD7N6z+bpzN1diZw7ruyxutABg8LEVoHDHnbPTV6yz84rkT6TP0IcZhOYVZIlxEc4SdX28QZHLiKOvxzcddE1U+1JJvpKfg8rz8JMsMwFVBd7TSEsX18E=,iv:vJpIt1isZO+nYp5zKF1OcxlPlDhpMclPJVBvt5aJYiE=,tag:LJjMhR3TKMgAElzBrLE+AQ==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
